Added dipper-section and styled

--- a/css/main.css
+++ b/css/main.css
@@ -22,3 +22,6 @@ section {
 	background: transparent url(../img/mars-pano.jpg) no-repeat center top;
 	background-size: cover;
 }
+
+.dipper-section {
+}
