--- a/css/main.css
+++ b/css/main.css
@@ -41,6 +41,25 @@ section {
 	}
 }
 
+.shuttle-section {
+	background-color: orange;
+}
+
 .shuttle {
 	width: 300px;
+	opacity: 0;
+	position: relative;
+}
+
+.js-shuttle-fade {
+	-webkit-animation: shuttle-fade 1s linear forwards;
+}
+
+@-webkit-keyframes shuttle-fade {
+	0% {
+		opacity: 0; top: 100px;
+	}
+	100% {
+		opacity: 1; top: 0;
+	}
 }
